# tradercripto

./: .claudemcp.md  .dockerignore  .env.example  .env.paper  .gitattributes  .gitignore  .mcp.json  BNB_analysis.json  BTC_analysis.json  CLAUDE.md  DOGE_analysis.json  Dockerfile  Dockerfile.ib_bot  ETH_analysis.json  GUIDA_DEPLOYMENT_HETZNER.md  IMPLEMENTATION_STATUS.md  ISTRUZIONI_ATTIVAZIONE.md  PLAN-FLAG-TRADER.md  README.md  REFACTORING_TASKS.md  ROUTE_MIGRATION_GUIDE.md  SOL_analysis.json  TRAEFIK_SETUP.md  XRP_analysis.json  alembic.ini  backtest.py  backtest_regime.py  backtest_strategies.py  backtest_timeframes.py  check_fills.py  check_learning_system.sh  check_positions.py  check_positions2.py  check_status.sh  check_system_status.py  close_all.py  db_utils.py  deploy.env.example  deploy.sh  deploy_phase1.sh  (+22 more)
.backup_pre_refactor/20251031_141651/backend_full/: ARCHITECTURE.md  check_account.py  check_all_symbols.py  check_api_key.py  check_db_balance.py  check_hyperliquid_orders.py  check_positions.py  check_scheduler.py  check_sync_status.py  clean_positions.py  close_xrp.py  debug_balance.py  fix_balance.py  fix_order_status.py  force_trade.py  get_asset_specs.py  main.py  pyproject.toml  sync_balance.py  test_all_crypto.py  test_hyperliquid.py  test_init_services.py  test_market_data.py  test_order.py  test_sync_trades.py  (+3 more)
backend/: .env.example  AI_DECISION_BUG_FIX.md  ARCHITECTURE.md  README.md  alembic.ini  apply_corrections.py  data.db-journal  data.db-shm  data.db-wal  data.db.backup_20251103_233257  data.db.backup_20251104_013005  data.db.backup_before_nullable_migration  main.py  pyproject.toml  run_analysis_now.py  symbol_availability_report.txt  test_ai_decision_fix.py  test_daily_analysis.py  view_report.py
backend/alembic/: env.py
backend/api/: account_management_routes.py  account_routes.py  accounts_async.py  ai_routes.py  config_routes.py  crypto_routes.py  daily_learning_routes.py  health_routes.py  learning_routes.py  market_data_async.py  market_data_routes.py  missed_opportunities_routes.py  order_routes.py  orders_async.py  ranking_routes.py  sync_routes.py  trade_history_routes.py  user_routes.py  ws.py  ws_async.py
backend/config/: logging.py  settings.py
backend/database/: README.md  connection.py  models.py
backend/docs/: API_RATE_LIMITS_ANALYSIS.md  DAILY_LEARNING_SYSTEM.md  HOURLY_MOMENTUM_MIGRATION.md  MICROSERVICES_ARCHITECTURE.md  RATE_LIMIT_ANALYSIS_HOURLY_MOMENTUM.md  REFACTORING_SUMMARY.md  TESTING_GUIDE.md
backend/factors/: __init__.py  atr.py  models.py  momentum.py  support.py
backend/middleware/: request_id.py
backend/output/: market_snapshot_20251111_135549.json  market_snapshot_20symbols_20251111_142244.json  market_snapshot_FULL_20251111_145915.json
backend/repositories/: account_repo.py  kline_repo.py  order_repo.py  position_repo.py  trade_repo.py  user_repo.py
backend/schemas/: account.py  order.py  user.py
backend/scripts/: analyze_trades.py  clean_database.py  emergency_liquidate.py  migrate_remove_balance_columns.py  test_technical_analysis.py
backend/services/: ai_decision_service.py  asset_calculator.py  asset_curve_calculator.py  auto_trader.py  exceptions.py  new_token_detector.py  orchestrator_service.py  order_executor.py  order_matching.py  order_scheduler.py  portfolio_snapshot_service.py  scheduler.py  startup.py  technical_analysis_service.py  toon_encoder.py  trading_commands.py
backend/websocket_cache/: candle_cache.json
(+653 files in other folders)
